--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 			Fish Emporium
 		</title>
 	</head>
-	<body bgcolor="purple">
+	<body bgcolor="#6dedd4">
 		<p>
 			Welcome to the Fish Emporium
 		</p>
