--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
 		<p>
 			Welcome to the Fish Emporium
 		</p>
-		<img src="https://giantbomb1.cbsistatic.com/uploads/scale_small/1/14741/1547076-mackrel.jpg">
+		<img src="http://dnr.maryland.gov/fisheries/fishfacts/american_shad.gif">
 	</body>
 </html>
