--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		</title>
 	</head>
 	<body bgcolor="#93b092">
-		<p>
+		<p style="color:white">
 			Welcome to the Fish Emporium
 		</p>
 		<img src="http://dnr.maryland.gov/fisheries/fishfacts/american_shad.gif">
