--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
 		</title>
 	</head>
 	<body bgcolor="#93b092">
-		<p style="color:#fcdb03">
+		<p style="color:#f24e4e">
 			Welcome to the Fish Emporium
 		</p>
 		<img src="http://dnr.maryland.gov/fisheries/fishfacts/american_shad.gif">
+		<img src="https://www.mpi.govt.nz/assets/On-page-images/Fish-species/Kingfish-on-page-image-600px.png">
 	</body>
 </html>
