--- a/index.html
+++ b/index.html
@@ -10,12 +10,11 @@
 	<body bgcolor="#93b092">
 		<b>
 		<i>
-		<p style="color:#f24e4e">
+		<p style="color:#f24e4e;font-size:160%;">
 			Welcome to the Fish Emporium
 		</p>
 		</b
 			</i>
 		<img src="http://dnr.maryland.gov/fisheries/fishfacts/american_shad.gif">
-		<img src="https://www.mpi.govt.nz/assets/On-page-images/Fish-species/Kingfish-on-page-image-600px.png">
 	</body>
 </html>
