--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<body bgcolor="#93b092">
 		<b>
 		<i>
-		<p style="color:#f24e4e;font-size:160%;">
+		<p style="color:#f24e4e;font-size:160%">
 			Welcome to the Fish Emporium
 		</p>
 		</b
