--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
 	<title>
 		Fish Emporium
 	</title>
-	<body bgcolor="#93b092">
+	<body bgcolor="black">
 		<b>
 		<i>
-		<p style="color:#f24e4e;font-size:160%">
-			Welcome to the Fish Emporium
+		<p style="color:#f24e4e;font-size:220%">
+			DUTY Welcomes You
 		</p>
 		</b
 			</i>
-		<img src="http://dnr.maryland.gov/fisheries/fishfacts/american_shad.gif">
+		<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT-5W5S4bJkiFJGgP4zrz7lD4OvI8EEP3IkdxKRbbIthxtAXpAt">
 	</body>
 </html>
