--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<title>
 		DUTY Website
 	</title>
-	<body bgcolor="black">
+	<body bgcolor="white">
 		<b>
 		<i>
 		<p style="color:#f24e4e;font-size:220%">
