--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 	<body bgcolor="white">
 		<b>
 		<i>
-		<p style="color:#f24e4e;font-size:220%;align="center">
+		<p style="color:#f24e4e;font-size:220%;align="middle">
 			DUTY Welcomes You
 		</p>
 		</b
 			</i>
-		<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT-5W5S4bJkiFJGgP4zrz7lD4OvI8EEP3IkdxKRbbIthxtAXpAt">
+		<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT-5W5S4bJkiFJGgP4zrz7lD4OvI8EEP3IkdxKRbbIthxtAXpAt" alt="Duty Welcomes You to the Zone" align="middle">
 	</body>
 </html>
