--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<body bgcolor="white">
 		<b>
 		<i>
-		<p style="color:#f24e4e;font-size:220%;style="text-align:center">
+		<p style="color:#f24e4e;font-size:220%;text-align:center">
 			DUTY Welcomes You
 		</p>
 		</b
