--- a/index.html
+++ b/index.html
@@ -15,6 +15,6 @@
 		</p>
 		</b
 			</i>
-		<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT-5W5S4bJkiFJGgP4zrz7lD4OvI8EEP3IkdxKRbbIthxtAXpAt" align="middle">
+		<img align="middle" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT-5W5S4bJkiFJGgP4zrz7lD4OvI8EEP3IkdxKRbbIthxtAXpAt">
 	</body>
 </html>
