--- a/index.html
+++ b/index.html
@@ -2,7 +2,12 @@
 
 <html>
 	<head>
-	
+	.center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
 	</head>
 	<title>
 		DUTY Website
@@ -15,6 +20,6 @@
 		</p>
 		</b
 			</i>
-		<img align="middle" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT-5W5S4bJkiFJGgP4zrz7lD4OvI8EEP3IkdxKRbbIthxtAXpAt">
+		<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT-5W5S4bJkiFJGgP4zrz7lD4OvI8EEP3IkdxKRbbIthxtAXpAt" class="center">
 	</body>
 </html>
