--- a/index.html
+++ b/index.html
@@ -2,12 +2,6 @@
 
 <html>
 	<head>
-	.center {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  width: 50%;
-}
 	</head>
 	<title>
 		DUTY Website
@@ -19,7 +13,7 @@
 			DUTY Welcomes You
 		</p>
 		</b
-			</i>
-		<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT-5W5S4bJkiFJGgP4zrz7lD4OvI8EEP3IkdxKRbbIthxtAXpAt" class="center">
+		</i>
+		<center><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT-5W5S4bJkiFJGgP4zrz7lD4OvI8EEP3IkdxKRbbIthxtAXpAt"></center>
 	</body>
 </html>
