--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 		The Spycrab Adoption Agency
 	</title>
 	<body bgcolor="white">
+	<nav>
+	</nav>
 		<main>
 				<b>
 					<i>
@@ -17,5 +19,7 @@
 		</i>
 		<center><img src="https://steamuserimages-a.akamaihd.net/ugc/930464212275911730/D3F1063564D666BEE55DF653158E1FF18CF784BD/"></center>
 		</main>	
+	<footer>
+	</footer>
 	</body>
 </html>
