--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<main>
 				<b>
 					<i>
-						<p style="color:#f24e4e;font-size:400%;text-align:center">
+						<p style="color:#2b60b5;font-size:400%;text-align:center">
 					Official Spycrab Adoption agency
 				</p>
 			</b
