--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 				</p>
 			</b
 		</i>
-		<center><img src="https://steamuserimages-a.akamaihd.net/ugc/930464212275911730/D3F1063564D666BEE55DF653158E1FF18CF784BD/"></center>
+		<center><img src="https://steamuserimages-a.akamaihd.net/ugc/930464212275911730/D3F1063564D666BEE55DF653158E1FF18CF784BD/" style="width:300px;height:350px"></center>
 		</main>	
 	<footer>
 	</footer>
