--- a/index.html
+++ b/index.html
@@ -2,6 +2,11 @@
 
 <html>
 	<head>
+	<style>
+	h1 {
+	   text-shadow: 2px 2px #666666;
+        }
+	</style>
 	</head>
 	<title>
 		The Spycrab Adoption Agency
@@ -12,9 +17,9 @@
 		<main>
 				<b>
 					<i>
-						<p style="color:#1151ab;font-size:400%;text-align:center">
+						<h1 style="color:#1151ab;font-size:400%;text-align:center">
 					Official Spycrab Adoption agency
-				</p>
+				</h1>
 			</b
 		</i>
 		<center><img src="https://steamuserimages-a.akamaihd.net/ugc/930464212275911730/D3F1063564D666BEE55DF653158E1FF18CF784BD/" style="width:316.8px;height:354px"></center>
